# ndp-sim

./: .gitignore  run_all_slices.py
address_remapping/: .gitignore  AGENTS.md  BANK_CONTROLLER_COST_MODEL_RULES.md  GENERAL_OPERATOR_LATENCY_MODEL.md  LATENCY_BREAKDOWN_SUMMAC_MAC_SFU.md  Makefile  Makefile copy  ORDINARY_OPERATOR_PERFORMANCE_MODEL_DIAGRAMS.md  PLAN.md  README.md  pyproject.toml
address_remapping/examples/configs/: config.json  llama3_8b_config.json  performance_config.json  smallsize_config.json
address_remapping/examples/graphs/: prefill_gemm_ring_4slice.json  ring_gemm_bias.json  rmsnorm_mul_withbaseaddr.json  rmsnorm_remapped.json  rmsnorm_withbaseaddr.json  rope_withbaseaddr.json  transformer_layer_single_slice.json
address_remapping/outputs/modeling/: ordinary_operator_latency_modeling_formulas.pptx  ordinary_operator_performance_model.pptx  ring_gemm_M32N1792K896_28slices_trace_gap_analysis.md  ring_gemm_M32NB32KA256KB1024_b_event_request_span_table.csv  ring_gemm_M32NB32KA256KB1024_pe_visible_bubble_table.csv  ring_gemm_performance_model.pptx  (+6 more)
address_remapping/scripts/: analyze_rms_norm_summac_row_changes.py  compare_layer0_roofline_vs_measured.py  compare_rms_norm_summac_requests.py  estimate_ttft_from_config.py  export_op_performance_summary.py  export_ttft_llama8b_ppt_table_csv.py  export_ttft_llama8b_summary_csv.py  generate_ring_gemm_performance_ppt.py  generate_ttft_assessment_ppt.py  merge_rms_norm_summac_handshake.py  setup_ramulator_windows.ps1  setup_ramulator_wsl.sh
address_remapping/tests/: test_performance.py  test_solver.py
(+337 files in other folders)
